-
Bug
-
Resolution: Fixed
-
P3: Somewhat important
-
6.8
-
None
-
-
2
-
a66c73d95 (dev)
-
Foundation Sprint 129
Currently configure and compilation errors with -no-feature-draganddrop
- clones
-
QTBUG-135806 qtbase autotests to compile without draganddrop
-
- Closed
-
- is cloned by
-
QTBUG-135875 Allow configuring wasm without clipboard feature
-
- Closed
-
| For Gerrit Dashboard: QTBUG-135874 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V |
| 641073,4 | Allow configuring WASM without draganddrop | 6.9 | qt/qtbase | Status: NEW | +2 | 0 |
| 638762,5 | Allow configuring WASM without draganddrop | dev | qt/qtbase | Status: MERGED | +2 | 0 |