Allow configuring WASM without draganddrop

Pick-to: 6.9 6.8
Fixes: QTBUG-135874
Change-Id: I84459af06d34682ca3bed1e2e1dab773c77bbcae
Reviewed-by: Morten Johan Sørvig <morten.sorvig@qt.io>